<resources>
    <string name="action_play_sound">Play sounds</string>
    <string name="app_name">pretixdroid</string>
    <string name="err_qr_invalid">The scanned QR code is not valid.</string>
    <string name="err_qr_version">Your app is older than the version of pretix on the server. Please check for updates of the pretixdroid app.</string>
    <string name="config_done">Configuration processed. You can now start scanning tickets.</string>
    <string name="err_title">Error</string>
    <string name="action_eventinfo">Event Info</string>
    <string name="dismiss">Dismiss</string>
    <string name="ok">OK</string>
    <string name="err_unknown">Unknown error</string>
    <string name="title_activity_main">pretixdroid</string>
    <string name="cancel">Cancel</string>
    <string name="cont">Continue</string>
    <string name="question_validation_error">Some of your input could not be validated.</string>
    <string name="question_input_required">This field is required.</string>
    <string name="question_input_invalid">This input is not valid.</string>
    <string name="yes">Yes</string>
    <string name="scan_result_valid">Valid ticket</string>
    <string name="scan_result_used">Ticket already used</string>
    <string name="scan_result_questions">Information required</string>
    <string name="scan_result_invalid">Invalid ticket</string>
    <string name="scan_result_product">Invalid product</string>
    <string name="scan_result_unpaid">Ticket not paid</string>
    <string name="hint_config">Scan a configuration code to start</string>
    <string name="hint_scan">Scan a ticket code</string>
    <string name="action_clear_config">Reset event configuration</string>
    <string name="hint_clear_config">Resets the connection of the app with a specific event and allows you to select a new event.</string>
    <string name="action_autofocus">Autofocus</string>
    <string name="action_flashlight">Flashlight</string>
    <string name="action_search">Manual search</string>
    <string name="permission_required">Camera permission is required</string>
    <string name="search_hint">Search (min. 4 characters)…</string>
    <string name="not_configured">App is not yet configured</string>
    <string name="status_redeemed">Redeemed</string>
    <string name="status_unpaid">Unpaid</string>
    <string name="status_valid">Valid</string>
    <string name="redeeming">Redeem ticket…</string>
    <string name="loading">Loading…</string>
    <string name="scan_result_redeemed">Ticket successfully redeemed.</string>
    <string name="ticket_attention">Attention, special ticket!</string>
    <string name="about">About the app</string>
    <string name="pref_head_scan">Scanning</string>
    <string name="pref_head_connection">Connection</string>
    <string name="pref_head_other">Other</string>
    <string name="pref_head_printing">Printing</string>
    <string name="reset_success">You can now scan a new configuration code</string>
    <string name="action_preferences">Settings</string>
    <string name="pref_camera">Use device camera</string>
    <string name="pref_camera_hint">Disable if your device has a dedicated barcode scanner built-in. Only works for a few devices so far.</string>
    <string name="pref_head_feedback">Scanning</string>
    <string name="pref_async">Asynchronous scanning (beta)</string>
    <string name="pref_async_hint_on">Scanned tickets are checked against an offline copy of the database. The app will try to synchronize with the server in regular intervals.</string>
    <string name="pref_async_hint_off">Scanned tickets are checked directly with the server. The app requires an internet connection to work.</string>
    <string name="pref_async_not_supported">Asynchronous scanning is not supported by the version of pretix running on your server. Please check for updates of pretix.</string>
    <string name="pref_async_warning">If you turn on asynchronous scanning, your phone will not be always up to date about the current database state. For example, if you use more than one device for scanning, a ticket might be shown as valid twice if it has already been scanned by a different device before.</string>
    <string name="pref_reset_warning">Really reset the app?</string>
    <string name="pref_reset_sync_warning">Your app is not fully synchronized. If you reset it now, some scans made on this device might get permanently lost.</string>
    <plurals name="time_minutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="time_hours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="time_days">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>
    <string name="sync_status">Synchronization status</string>
    <string name="sync_status_last">Last successful synchronization:</string>
    <string name="sync_status_last_failed">Last failed synchronization:</string>
    <string name="sync_status_never">not yet synchronized</string>
    <string name="sync_status_now">just now</string>
    <string name="sync_status_date_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="sync_status_local">Checkins queued to upload:</string>
    <string name="already_scanned">already scanned</string>
    <string name="total_tickets_sold">total tickets sold</string>
    <string name="no_connection">Could not connect to the server!</string>
    <string name="info_disabled">Info view is disabled</string>
    <string name="dialog_unpaid_title">Unpaid order</string>
    <string name="dialog_unpaid_text">This ticket belongs to an order that has not yet been paid. Do you still want to check it in? This will not mark the order as paid.</string>
    <string name="dialog_unpaid_retry">Check in anyways</string>
    <string name="action_print_badge">Print Badge</string>
    <string name="action_blescan">Scan BLE Printers</string>
    <string name="ble_scan">Scan</string>
    <string name="menu_disconnect">Disconnect BLE Device</string>
    <string name="menu_connect">Connect BLE Device</string>
    <string name="menu_print_test_ticket">Print Test Ticket</string>
    <string name="pref_printer_enable">Enable BLE Printing</string>
    <string name="pref_printer_print_immediately">Print badge immediately</string>
    <string name="print_test_badge">Print test badge</string>
    <string name="scan_timeout">Scan Timeout</string>
    <string name="no_devices_found">No BLE printing devices found</string>
    <string name="printing_disabled">Printing disabled by configuration</string>
    <string name="printer_disconnected">Printer disconnected</string>
    <string name="printer_connection_error">Printer connection error</string>
    <string name="menu_connected">BLE Connected</string>
    <string name="menu_disconnected">BLE Disconnected</string>
</resources>
