<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_head_connection">
        <Preference
            android:key="action_reset"
            android:summary="@string/hint_clear_config"
            android:title="@string/action_clear_config" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="async"
            android:summaryOn="@string/pref_async_hint_on"
            android:summaryOff="@string/pref_async_hint_off"
            android:title="@string/pref_async" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_head_scan">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="camera"
            android:summary="@string/pref_camera_hint"
            android:title="@string/pref_camera" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="playaudio"
            android:title="@string/action_play_sound" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="camera"
            android:key="autofocus"
            android:title="@string/action_autofocus" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_head_printer">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="ble_printing"
            android:title="@string/pref_printer_enable" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="print_immediately"
            android:title="@string/pref_printer_print_immediately" />
        <Preference
            android:dependency="ble_printing"
            android:key="action_blescan"
            android:title="@string/action_blescan" >
            <intent android:action="eu.pretix.pretixdroid.ui.BleScanActivity" />
        </Preference>
        <Preference
            android:dependency="ble_printing"
            android:key="action_print_test_badge"
            android:title="@string/print_test_badge" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_head_other">
        <Preference
            android:key="action_about"
            android:title="@string/about" />
    </PreferenceCategory>
</PreferenceScreen>