<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.pretix.pretixdroid.ui.MainActivity">
    <item
        android:id="@+id/action_eventinfo"
        android:title="@string/action_eventinfo"
        android:icon="@drawable/ic_info_outline_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_keyboard_white_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_flashlight"
        android:title="@string/action_flashlight"
        android:checkable="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_preferences"
        android:title="@string/action_preferences"
        app:showAsAction="never" />
<!--    <item
        android:id="@+id/action_blescan"
        android:title="@string/action_blescan" />-->
<!--    <item android:id="@+id/menu_connect"
        android:title="@string/menu_connect"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_disconnect"
        android:title="@string/menu_disconnect"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"/>-->
<!--    <item android:id="@+id/menu_print_test_ticket"
        android:title="@string/menu_print_test_ticket"
        android:orderInCategory="101"
        app:showAsAction="ifRoom|withText"/>
    -->
</menu>
